# knn-cpp

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: FindANN.cmake  FindFlann.cmake  FindKNNCPP.cmake
dep/: CMakeLists.txt
doc/: Doxyfile
examples/: CMakeLists.txt  brute_force_search.cpp  kdtree_flann_search.cpp  kdtree_minkowski_search.cpp
include/: kdtree.h  kdtree_ann.h  kdtree_eigen.h  kdtree_flann.h  knncpp.h
include/knn/: brute_force.h  distance_functors.h  kdtree_eigen.h  kdtree_flann.h  kdtree_minkowski.h  matrix.h  multi_index_hashing.h  query_heap.h
test/: CMakeLists.txt  data_for_test.txt  eigen_assert.h  main.cpp  performance_hamming.cpp  test_kdtree.cpp  test_kdtree_ann.cpp  test_kdtree_eigen.cpp  test_kdtree_flann.cpp  test_perform_euclid.cpp  test_performance.cpp
test/assert/: eigen_require.h
test/data/: descriptors.txt
test/knn/: brute_force.cpp  kdtree_eigen.cpp  kdtree_flann.cpp  kdtree_minkowski.cpp  multi_index_hashing.cpp
test/performance/: performance_euclidean.cpp  performance_hamming.cpp
test/unit/: brute_force.cpp  kdtree_flann.cpp  kdtree_minkowski.cpp  multi_index_hashing.cpp
